// Shadowchats â€” Copyright (C) 2025
// Dorovskoy Alexey Vasilievich (One290 / 0ne290) <lenya.dorovskoy@mail.ru>
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version. See the LICENSE file for details.
// For full copyright and authorship information, see the COPYRIGHT file.

syntax = "proto3";

option csharp_namespace = "Shadowchats.Authentication.Presentation.Grpc";

package authentication;

service AuthenticationService {
  rpc RegisterAccount (RegisterAccountRequest) returns (RegisterAccountResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GenerateAccessToken (GenerateAccessTokenRequest) returns (GenerateAccessTokenResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc LogoutAll (LogoutAllRequest) returns (LogoutAllResponse);
}

message RegisterAccountRequest {
  string login = 1;
  string password = 2;
}

message RegisterAccountResponse {
  string message = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
  string access_token = 2;
}

message GenerateAccessTokenRequest {
  string refresh_token = 1;
}

message GenerateAccessTokenResponse {
  string access_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  string message = 1;
}

message LogoutAllRequest {
  string login = 1;
  string password = 2;
}

message LogoutAllResponse {
  string message = 1;
}